--- a/views/VerifyOtp.ejs
+++ b/views/VerifyOtp.ejs
@@ -17,24 +17,10 @@
                 <h2>LOGIN</h2>
                 <form class="form">
                     <div class="inputDiv">
-                        <label for="email">Email</label>
-                        <input type="text" name="email" placeholder="Enter Email" class="input">
-                    </div>
-                    <div class="inputDiv">
-                        <label for="password">Password</label>
-                        <input type="text" name="password" placeholder="Enter Password" class="input">
+                        <label for="email">Otp</label>
+                        <input type="text" name="email" placeholder="Otp" class="input">
                     </div>
                     
-                    <div class="checkboxDiv">
-                    <div class="aCheckbox">
-                        <label for="code" class="lcheckboxLabel">Use code</label>
-                        <input type="checkbox" name="code" id="code" class="checkbox">
-                    </div>
-                    <div class="aCheckbox">
-                        <label for="code" class="checkboxLabel">Otp</label>
-                        <input type="checkbox" name="otp" id="otp" class="checkbox">
-                    </div>
-                    </div>
                     <button class="submit">Proceed</button>
                 </form>
             </div>
