--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -15,7 +15,7 @@
         <div id="main">
             <div class="mainContent">
                 <h2>LOGIN</h2>
-                <form class="form">
+                <form class="form" method="post" action="/login">
                     <div class="inputDiv">
                         <label for="email">Email</label>
                         <input type="text" name="email" placeholder="Enter Email" class="input">
