--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -124,7 +124,18 @@
 
 
 
+@media screen and (max-width: 700px ) {
+    #menu{
+        width: 50%
+    }
+}
 
+
+@media screen and (max-width: 500px ) {
+    #menu{
+        width: 80
+    }
+}
 
 
 
