--- a/views/Dashboard.ejs
+++ b/views/Dashboard.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/css/menu.css">
+    <link rel="stylesheet" href="/public/css/topMenu.css">
     <link rel="stylesheet" href="/public/css/dashboard.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <title>E Authentication</title>
@@ -12,10 +13,13 @@
 <body>
     <div id="fullBody">
         <%-include("./partials/menu.ejs")%>
-        <div id="main">
-            <h1>Welcome Dear</h1>
-            <h2>User</h2>
-            <h2>To the E-Authentication System</h2>
+        <div id="coverBody"> 
+            <%-include("./partials/topMenu.ejs")%>
+            <div id="main">
+                <h1>Welcome Dear</h1>
+                <h2>User</h2>
+                <h2>To the E-Authentication System</h2>
+            </div>
         </div>
     </div>
     <script type="text/javascript" src="/public/js/menu.js"></script>
