--- a/views/Index.ejs
+++ b/views/Index.ejs
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/css/menu.css">
+    <link rel="stylesheet" href="/public/css/topMenu.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <title>E Authentication</title>
 </head>
 <body>
     <div id="fullBody">
         <%-include("./partials/menu.ejs")%>
-        <div id="main">
-            <h1>Welcome To E-Authentication System</h1>
+        <div id="coverBody"> 
+            <%-include("./partials/topMenu.ejs")%>
+            <div id="main">
+                <h1>Welcome To E-Authentication System</h1>
+            </div>
         </div>
     </div>
     <script type="text/javascript" src="/public/js/menu.js"></script>
