--- a/views/Register.ejs
+++ b/views/Register.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/css/menu.css">
+    <link rel="stylesheet" href="/public/css/topMenu.css">
     <link rel="stylesheet" href="/public/css/register.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <title>E Authentication</title>
@@ -12,43 +13,46 @@
 <body>
     <div id="fullBody">
         <%-include("./partials/menu.ejs")%>
-        <div id="main">
-            <h1>New Registration</h1>
-            <div class="mainContent">
-                <h2>Enter New User Details</h2>
-                <% if(message){ %> 
-                    <span class="successMessage"><%=message%></span>
-                <%}%>
-                <form class="form" action="/register" method="post">
-                    <div class="inputDiv">
-                        <label for="fullname">Full Name</label>
-                        <input type="text" name="fullname" placeholder="Full name" class="input">
-                    </div>
-                    <div class="inputDiv">
-                        <label for="username">Username</label>
-                        <input type="text" name="username" placeholder="Username" class="input">
-                    </div>
-                    <div class="inputDiv">
-                        <label for="email">Email</label>
-                        <input type="text" name="email" placeholder="Enter Username" class="input">
-                    </div>
-                    <div class="inputDiv">
-                        <label for="phone">Mobile No.</label>
-                        <input type="text" name="phone" placeholder="Enter Mobile No." class="input">
-                    </div>
-                    <div class="inputDiv">
-                        <label for="password">Password</label>
-                        <input type="text" name="password" placeholder="Enter Password" class="input">
-                    </div>
-                    <div class="inputDiv">
-                        <label for="confpassword">Confirm Password</label>
-                        <input type="text" name="confPassword" placeholder="Enter Password Again" class="input">
-                    </div>
-                    <button class="submit">Register</button>
-                </form>
-                <% if(error){ %> 
-                    <span class="errorMessage"><%=error%></span>
-                <%}%>
+        <div id="coverBody"> 
+            <%-include("./partials/topMenu.ejs")%>
+            <div id="main">
+                <h1>New Registration</h1>
+                <div class="mainContent">
+                    <h2>Enter New User Details</h2>
+                    <% if(message){ %> 
+                        <span class="successMessage"><%=message%></span>
+                    <%}%>
+                    <form class="form" action="/register" method="post">
+                        <div class="inputDiv">
+                            <label for="fullname">Full Name</label>
+                            <input type="text" name="fullname" placeholder="Full name" class="input">
+                        </div>
+                        <div class="inputDiv">
+                            <label for="username">Username</label>
+                            <input type="text" name="username" placeholder="Username" class="input">
+                        </div>
+                        <div class="inputDiv">
+                            <label for="email">Email</label>
+                            <input type="text" name="email" placeholder="Enter Username" class="input">
+                        </div>
+                        <div class="inputDiv">
+                            <label for="phone">Mobile No.</label>
+                            <input type="text" name="phone" placeholder="Enter Mobile No." class="input">
+                        </div>
+                        <div class="inputDiv">
+                            <label for="password">Password</label>
+                            <input type="text" name="password" placeholder="Enter Password" class="input">
+                        </div>
+                        <div class="inputDiv">
+                            <label for="confpassword">Confirm Password</label>
+                            <input type="text" name="confPassword" placeholder="Enter Password Again" class="input">
+                        </div>
+                        <button class="submit">Register</button>
+                    </form>
+                    <% if(error){ %> 
+                        <span class="errorMessage"><%=error%></span>
+                    <%}%>
+                </div>
             </div>
         </div>
     </div>
