--- a/views/VerifyOtp.ejs
+++ b/views/VerifyOtp.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/css/menu.css">
+    <link rel="stylesheet" href="/public/css/topMenu.css">
     <link rel="stylesheet" href="/public/css/register.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <title>E Authentication</title>
@@ -12,23 +13,26 @@
 <body>
     <div id="fullBody">
         <%-include("./partials/menu.ejs")%>
-        <div id="main">
-            <div class="mainContent">
-                <h2>Verfify</h2>
-                <% if(message){ %> 
-                    <span class="successMessage"><%=message%></span>
-                <%}%>
-                <form class="form" method="post" action="/verify">
-                    <div class="inputDiv">
-                        <label for="otp">Otp</label>
-                        <input type="text" name="otp" placeholder="Enter Otp" class="input">
-                    </div>
-                    
-                    <button class="submit">Proceed</button>
-                </form>
-                <% if(error){ %> 
-                    <span class="errorMessage"><%=error%></span>
-                <%}%>
+        <div id="coverBody"> 
+            <%-include("./partials/topMenu.ejs")%>
+            <div id="main">
+                <div class="mainContent">
+                    <h2>Verfify</h2>
+                    <% if(message){ %> 
+                        <span class="successMessage"><%=message%></span>
+                    <%}%>
+                    <form class="form" method="post" action="/verify">
+                        <div class="inputDiv">
+                            <label for="otp">Otp</label>
+                            <input type="text" name="otp" placeholder="Enter Otp" class="input">
+                        </div>
+                        
+                        <button class="submit">Proceed</button>
+                    </form>
+                    <% if(error){ %> 
+                        <span class="errorMessage"><%=error%></span>
+                    <%}%>
+                </div>
             </div>
         </div>
     </div>
