add delete users page

--- a/views/VerifyOtp.ejs
+++ b/views/VerifyOtp.ejs
@@ -17,7 +17,7 @@
             <%-include("./partials/topMenu.ejs")%>
             <div id="main">
                 <div class="mainContent">
-                    <h2>Verfify</h2>
+                    <h2>Verify</h2>
                     <% if(message){ %> 
                         <span class="successMessage"><%=message%></span>
                     <%}%>
