--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -56,6 +56,28 @@
                 <% } %> 
                 <%if(data){%>
                     <% if(data.email&&data.username){ %> 
+                        <a href="/dashboard" class="menuLink">
+                            <div class="aMenu">
+                            
+                                <div class="menuIcon">
+                                    <i class="bi bi-person-bounding-box"></i>
+                                </div>
+                                <div class="menuText">
+                                    Dashboard
+                                </div>
+                            </div>
+                        </a>
+                        <a href="/users" class="menuLink">
+                            <div class="aMenu">
+                            
+                                <div class="menuIcon">
+                                    <i class="bi bi-people-fill"></i>
+                                </div>
+                                <div class="menuText">
+                                    Users
+                                </div>
+                            </div>
+                        </a>
                         <a href="/logout" class="menuLink">
                             <div class="aMenu">
                             
