--- a/views/Dashboard.ejs
+++ b/views/Dashboard.ejs
@@ -17,7 +17,9 @@
             <%-include("./partials/topMenu.ejs")%>
             <div id="main">
                 <h1>Welcome Dear</h1>
-                <h2>User</h2>
+                <% if(data){ %> 
+                    <h2><%=data.fullname%></h2>
+                <% } %> 
                 <h2>To the E-Authentication System</h2>
             </div>
         </div>
