restructure otp for payment instead and add some pages

--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -105,6 +105,9 @@
     display: flex;
     color: inherit;
 }
+.menuLink:hover{
+    text-decoration: none;
+}
 .aMenu{
     display: flex;
     flex-direction: row;
