add more courses in html

--- a/public/css/register.css
+++ b/public/css/register.css
@@ -42,6 +42,7 @@ label{
     border: none;
     border-radius: 5px;
     color: #fff;
+    cursor: pointer;
 }
 .successMessage{
     display: flex;
