--- a/views/AddCourse.ejs
+++ b/views/AddCourse.ejs
@@ -102,16 +102,28 @@
                             <td>2021/2022</td>
                             <td>400</td>
                             <td>Second Semester</td>
+                            <td>DELETE</td>
                             </tr>
                             <tr>
-                            <th scope="row">Data Communication And Network II</th>
-                            <td>CSC416</td>
-                            <td>2</td>
-                            <td>CORE</td>
-                            <td>2021/2022</td>
-                            <td>400</td>
-                            <td>Second Semester</td>
-                            </tr>
+                                <th scope="row">Structured Programming II</th>
+                                <td>CSC422</td>
+                                <td>2</td>
+                                <td>CORE</td>
+                                <td>2021/2022</td>
+                                <td>400</td>
+                                <td>Second Semester</td>
+                                <td>DELETE</td>
+                                </tr>
+                                <tr>
+                                <th scope="row">Queuing System</th>
+                                <td>CSC458</td>
+                                <td>2</td>
+                                <td>CORE</td>
+                                <td>2021/2022</td>
+                                <td>400</td>
+                                <td>Second Semester</td>
+                                <td>DELETE</td>
+                                </tr>
                             
                         </tbody>
                         </table>
