--- a/views/CourseRegistration.ejs
+++ b/views/CourseRegistration.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/public/css/menu.css">
     <link rel="stylesheet" href="/public/css/topMenu.css">
     <link rel="stylesheet" href="/public/css/dashboard.css">
+    <link rel="stylesheet" href="/public/css/register.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/public/css/table-courses.css">
@@ -44,7 +45,7 @@
                                         <td><%=course.session%></td>
                                         <td><%=course.level%></td>
                                         <td><%=course.semester%></td>
-                                        <td><input type="checkbox"></td>
+                                        <td><input type="checkbox" class="courses" data-course="<%=course._id%>"></td>
                                         </tr>
                                         <tr>
                                 <% }) %> 
@@ -61,8 +62,18 @@
                             <td><input type="checkbox"></td>
                             </tr>
                             <tr>
-                            <th scope="row">Data Communication And Network II</th>
-                            <td>CSC416</td>
+                            <th scope="row">Structured Programming II</th>
+                            <td>CSC422</td>
+                            <td>2</td>
+                            <td>CORE</td>
+                            <td>2021/2022</td>
+                            <td>400</td>
+                            <td>Second Semester</td>
+                            <td><input type="checkbox"></td>
+                            </tr>
+                            <tr>
+                            <th scope="row">Queuing System</th>
+                            <td>CSC458</td>
                             <td>2</td>
                             <td>CORE</td>
                             <td>2021/2022</td>
@@ -73,6 +84,7 @@
                             
                         </tbody>
                     </table>
+                    <button class="submit" id="submit">Register Courses</button>
                 </div>
             </div>
         </div>
@@ -85,5 +97,8 @@
             alert("<%= error %> ")
         </script>
     <% } %> 
+    <script type="text/javascript" src="/public/js/registerCourse.js">
+        
+    </script>
 </body>
 </html>
